plugins {
    id "java-library"
    id "jacoco"
}

group = "uk.gov.di"
version = "unspecified"

dependencies {

    implementation libs.bundles.awsLambda,
            libs.bundles.nimbus,
            libs.bouncyCastle,
            libs.govUkNotify,
            libs.bundles.awsDynamoDb,
            libs.jetbrainsAnnotations,
            libs.awsKms,
            libs.bundles.lettuce,
            libs.libphonenumber,
            libs.awsSns,
            libs.awsS3,
            libs.awsSqs,
            libs.awsSsm,
            platform(libs.xrayBom),
            libs.bundles.xray,
            libs.awsCloudwatchEmf,
            libs.gson,
            libs.bundles.apache,
            platform(libs.openTelemetryBom),
            libs.openTelemetryAwsSdk,
            libs.openTelemetryJavaHttpClient,
            libs.apacheHttpComponents

    testImplementation libs.bundles.test,
            libs.awsLambdaTests,
            project(":orchestration-shared-test")
    testRuntimeOnly libs.bundles.testRuntime
}

test {
    useJUnitPlatform()
    environment "TRACING_ENABLED", "false"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jacocoTestReport {
    reports {
        xml.required = true
    }
    dependsOn "test"
}
